[package]
name = "colorglyph"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Tyler van der Hoeven <tyler@tinyanvil.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.0.0"
fixed-point-math = { version = "0.0.2"}

[dev_dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
chrono = { version = "0.4.26" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true