[package]
name = "colorglyph"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Tyler van der Hoeven <tyler@tinyanvil.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "20.3.2", features = [] }
soroban-fixed-point-math = { version = "1.0.0" }

[dev_dependencies]
soroban-sdk = { version = "20.3.2", features = ["testutils"] }
chrono = { version = "0.4.34" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true