[package]
name = "colorglyph"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Tyler van der Hoeven <tyler@tinyanvil.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.5.1", features = [] }
soroban-fixed-point-math = { version = "1.1.1" }

[dev-dependencies]
soroban-sdk = { version = "21.5.1", features = ["testutils"] }
chrono = { version = "0.4.38" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true