[package]
name = "soroban-colors-contract"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Tyler van der Hoeven <tyler@tinyanvil.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils", "soroban-auth/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-auth = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-auth = { workspace = true, features = ["testutils"] }
stellar-xdr = { workspace = true, features = ["next", "std"] }
stellar-strkey = { workspace = true }
ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }